# WormWorld

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/phase0/acceptance_seed_42_steps_1000/: config.json  events.jsonl  manifest.json  snapshots.jsonl
artifacts/phase1/acceptance_seed_42_actions_70/: config.json  events.jsonl  manifest.json  snapshots.jsonl
artifacts/phase2/acceptance_seeds_11_22_33/: summary.json
artifacts/phase3/development_action_eligibility_v2/: analysis.json  future_suite_config.json  sensitivity_config.json
artifacts/phase3/development_neutral_margins_v1/: analysis.json  future_suite_config.json  margin_analysis.json  sensitivity_config.json
artifacts/phase3/development_robustness_v1/: robustness_screen_config.json  summary.json
docs/: DEVELOPMENT_PLAN.md  PROJECT_STATE.md  VIEWER_CONTRACT.md
src/worm_world/: __init__.py  benchmark.py  cli.py  rng.py  schemas.py
tests/: test_benchmark.py  test_config.py  test_detritus.py  test_evolution_experiment.py  test_evolution_world.py  test_genetics.py  test_learning_controller.py  test_learning_experiment.py  test_learning_robustness.py  test_learning_sensitivity.py  test_learning_suite.py  test_learning_survival_gate.py  test_noop_world.py  test_phase0_acceptance.py  test_phase1_acceptance.py  test_physiology.py  test_plants.py  test_population_store.py  test_population_world.py  test_rng.py  test_runner.py  test_sandbox_runner.py  test_sandbox_world.py  test_schemas.py  test_smoke.py  test_viewer_replay.py  test_viewer_web.py
(+828 files in other folders)
