[project]
name = "worm-world"
version = "0.1.0"
description = "Deterministic artificial-life research simulator."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2,<5",
    "pyright>=1.1.400,<2",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = "none"
